src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DO
    ERROR
    LBRACKET
    RBRACKET

Grammar

Rule 0     S' -> start
Rule 1     start -> start_statement
Rule 2     start -> empty
Rule 3     start_statement -> class_decl
Rule 4     start_statement -> class_decl start_statement
Rule 5     class_decl -> CLASS ID LCURLY class_body RCURLY
Rule 6     class_decl -> CLASS ID EXTENDS ID LCURLY class_body RCURLY
Rule 7     class_body -> field_decl
Rule 8     class_body -> constructor_decl
Rule 9     class_body -> method_decl
Rule 10    class_body -> class_body field_decl
Rule 11    class_body -> class_body constructor_decl
Rule 12    class_body -> class_body method_decl
Rule 13    field_decl -> var_decl
Rule 14    field_decl -> modifier var_decl
Rule 15    modifier -> PUBLIC
Rule 16    modifier -> PRIVATE
Rule 17    modifier -> STATIC
Rule 18    modifier -> PUBLIC STATIC
Rule 19    modifier -> PRIVATE STATIC
Rule 20    modifier -> empty
Rule 21    var_decl -> type variables SEMICOLON
Rule 22    type -> INT
Rule 23    type -> FLOAT
Rule 24    type -> BOOLEAN
Rule 25    type -> STRING
Rule 26    type -> ID
Rule 27    variables -> variable
Rule 28    variables -> variables COMMA variable
Rule 29    variable -> ID
Rule 30    method_decl -> modifier type ID LPAREN RPAREN block
Rule 31    method_decl -> modifier type ID LPAREN formals RPAREN block
Rule 32    method_decl -> modifier VOID ID LPAREN RPAREN block
Rule 33    method_decl -> modifier VOID ID LPAREN formals RPAREN block
Rule 34    method_decl -> type ID LPAREN RPAREN block
Rule 35    method_decl -> type ID LPAREN formals RPAREN block
Rule 36    method_decl -> VOID ID LPAREN RPAREN block
Rule 37    method_decl -> VOID ID LPAREN formals RPAREN block
Rule 38    constructor_decl -> modifier ID LPAREN RPAREN block
Rule 39    constructor_decl -> modifier ID LPAREN formals RPAREN block
Rule 40    constructor_decl -> ID LPAREN RPAREN block
Rule 41    constructor_decl -> ID LPAREN formals RPAREN block
Rule 42    formals -> formal_param
Rule 43    formals -> formal_param COMMA formals
Rule 44    formal_param -> type variable
Rule 45    block -> LCURLY stmtlist RCURLY
Rule 46    block -> empty
Rule 47    stmtlist -> stmt
Rule 48    stmtlist -> stmtlist stmt
Rule 49    stmt -> IF LPAREN expression RPAREN stmt
Rule 50    stmt -> IF LPAREN expression RPAREN stmt ELSE stmt
Rule 51    stmt -> WHILE LPAREN expression RPAREN stmt
Rule 52    stmt -> FOR LPAREN stmt_expression SEMICOLON expression SEMICOLON stmt_expression RPAREN stmt
Rule 53    stmt -> FOR LPAREN stmt_expression SEMICOLON expression SEMICOLON RPAREN stmt
Rule 54    stmt -> FOR LPAREN stmt_expression SEMICOLON SEMICOLON stmt_expression RPAREN stmt
Rule 55    stmt -> FOR LPAREN SEMICOLON expression SEMICOLON stmt_expression RPAREN stmt
Rule 56    stmt -> FOR LPAREN stmt_expression SEMICOLON SEMICOLON RPAREN stmt
Rule 57    stmt -> FOR LPAREN SEMICOLON SEMICOLON stmt_expression RPAREN stmt
Rule 58    stmt -> FOR LPAREN SEMICOLON expression SEMICOLON RPAREN stmt
Rule 59    stmt -> FOR LPAREN SEMICOLON SEMICOLON RPAREN stmt
Rule 60    stmt -> RETURN expression SEMICOLON
Rule 61    stmt -> RETURN SEMICOLON
Rule 62    stmt -> stmt_expression SEMICOLON
Rule 63    stmt -> BREAK SEMICOLON
Rule 64    stmt -> CONTINUE SEMICOLON
Rule 65    stmt -> block
Rule 66    stmt -> var_decl
Rule 67    stmt -> SEMICOLON
Rule 68    literal -> INTEGER
Rule 69    literal -> FLOAT
Rule 70    literal -> STRING_LITERAL
Rule 71    literal -> NULL
Rule 72    literal -> FALSE
Rule 73    literal -> TRUE
Rule 74    primary -> literal
Rule 75    primary -> THIS
Rule 76    primary -> SUPER
Rule 77    primary -> LPAREN expression RPAREN
Rule 78    primary -> NEW ID LPAREN RPAREN
Rule 79    primary -> NEW ID LPAREN arguments RPAREN
Rule 80    primary -> method_invocation
Rule 81    primary -> lhs
Rule 82    arguments -> expression
Rule 83    arguments -> expression COMMA arguments
Rule 84    lhs -> field_access
Rule 85    field_access -> primary DOT ID
Rule 86    field_access -> ID
Rule 87    method_invocation -> field_access LPAREN arguments RPAREN
Rule 88    method_invocation -> field_access LPAREN RPAREN
Rule 89    expression -> primary
Rule 90    expression -> assign
Rule 91    expression -> expression arith_op expression
Rule 92    expression -> expression bool_op expression
Rule 93    expression -> unary_op expression
Rule 94    operation -> expression arith_op expression
Rule 95    operation -> expression bool_op expression
Rule 96    assign -> lhs SETEQUAL expression
Rule 97    assign -> lhs PLUSPLUS
Rule 98    assign -> lhs MINUSMINUS
Rule 99    assign -> PLUSPLUS lhs
Rule 100   assign -> MINUSMINUS lhs
Rule 101   arith_op -> PLUS
Rule 102   arith_op -> MINUS
Rule 103   arith_op -> TIMES
Rule 104   arith_op -> DIVIDE
Rule 105   bool_op -> GREATER
Rule 106   bool_op -> LESS
Rule 107   bool_op -> GREATEREQ
Rule 108   bool_op -> LESSEQ
Rule 109   bool_op -> EQUAL
Rule 110   bool_op -> NOTEQUAL
Rule 111   bool_op -> AND
Rule 112   bool_op -> OR
Rule 113   unary_op -> PLUS
Rule 114   unary_op -> MINUS
Rule 115   unary_op -> NOT
Rule 116   stmt_expression -> assign
Rule 117   stmt_expression -> method_invocation
Rule 118   empty -> <empty>

Terminals, with rules where they appear

AND                  : 111
BOOLEAN              : 24
BREAK                : 63
CLASS                : 5 6
COMMA                : 28 43 83
CONTINUE             : 64
DIVIDE               : 104
DO                   : 
DOT                  : 85
ELSE                 : 50
EQUAL                : 109
ERROR                : 
EXTENDS              : 6
FALSE                : 72
FLOAT                : 23 69
FOR                  : 52 53 54 55 56 57 58 59
GREATER              : 105
GREATEREQ            : 107
ID                   : 5 6 6 26 29 30 31 32 33 34 35 36 37 38 39 40 41 78 79 85 86
IF                   : 49 50
INT                  : 22
INTEGER              : 68
LBRACKET             : 
LCURLY               : 5 6 45
LESS                 : 106
LESSEQ               : 108
LPAREN               : 30 31 32 33 34 35 36 37 38 39 40 41 49 50 51 52 53 54 55 56 57 58 59 77 78 79 87 88
MINUS                : 102 114
MINUSMINUS           : 98 100
NEW                  : 78 79
NOT                  : 115
NOTEQUAL             : 110
NULL                 : 71
OR                   : 112
PLUS                 : 101 113
PLUSPLUS             : 97 99
PRIVATE              : 16 19
PUBLIC               : 15 18
RBRACKET             : 
RCURLY               : 5 6 45
RETURN               : 60 61
RPAREN               : 30 31 32 33 34 35 36 37 38 39 40 41 49 50 51 52 53 54 55 56 57 58 59 77 78 79 87 88
SEMICOLON            : 21 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 61 62 63 64 67
SETEQUAL             : 96
STATIC               : 17 18 19
STRING               : 25
STRING_LITERAL       : 70
SUPER                : 76
THIS                 : 75
TIMES                : 103
TRUE                 : 73
VOID                 : 32 33 36 37
WHILE                : 51
error                : 

Nonterminals, with rules where they appear

arguments            : 79 83 87
arith_op             : 91 94
assign               : 90 116
block                : 30 31 32 33 34 35 36 37 38 39 40 41 65
bool_op              : 92 95
class_body           : 5 6 10 11 12
class_decl           : 3 4
constructor_decl     : 8 11
empty                : 2 20 46
expression           : 49 50 51 52 53 55 58 60 77 82 83 91 91 92 92 93 94 94 95 95 96
field_access         : 84 87 88
field_decl           : 7 10
formal_param         : 42 43
formals              : 31 33 35 37 39 41 43
lhs                  : 81 96 97 98 99 100
literal              : 74
method_decl          : 9 12
method_invocation    : 80 117
modifier             : 14 30 31 32 33 38 39
operation            : 
primary              : 85 89
start                : 0
start_statement      : 1 4
stmt                 : 47 48 49 50 50 51 52 53 54 55 56 57 58 59
stmt_expression      : 52 52 53 54 54 55 56 57 62
stmtlist             : 45 48
type                 : 21 30 31 34 35 44
unary_op             : 93
var_decl             : 13 14 66
variable             : 27 28 44
variables            : 21 28

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . start_statement
    (2) start -> . empty
    (3) start_statement -> . class_decl
    (4) start_statement -> . class_decl start_statement
    (118) empty -> .
    (5) class_decl -> . CLASS ID LCURLY class_body RCURLY
    (6) class_decl -> . CLASS ID EXTENDS ID LCURLY class_body RCURLY

    $end            reduce using rule 118 (empty -> .)
    CLASS           shift and go to state 5

    start                          shift and go to state 1
    start_statement                shift and go to state 2
    empty                          shift and go to state 3
    class_decl                     shift and go to state 4

state 1

    (0) S' -> start .



state 2

    (1) start -> start_statement .

    $end            reduce using rule 1 (start -> start_statement .)


state 3

    (2) start -> empty .

    $end            reduce using rule 2 (start -> empty .)


state 4

    (3) start_statement -> class_decl .
    (4) start_statement -> class_decl . start_statement
    (3) start_statement -> . class_decl
    (4) start_statement -> . class_decl start_statement
    (5) class_decl -> . CLASS ID LCURLY class_body RCURLY
    (6) class_decl -> . CLASS ID EXTENDS ID LCURLY class_body RCURLY

    $end            reduce using rule 3 (start_statement -> class_decl .)
    CLASS           shift and go to state 5

    class_decl                     shift and go to state 4
    start_statement                shift and go to state 6

state 5

    (5) class_decl -> CLASS . ID LCURLY class_body RCURLY
    (6) class_decl -> CLASS . ID EXTENDS ID LCURLY class_body RCURLY

    ID              shift and go to state 7


state 6

    (4) start_statement -> class_decl start_statement .

    $end            reduce using rule 4 (start_statement -> class_decl start_statement .)


state 7

    (5) class_decl -> CLASS ID . LCURLY class_body RCURLY
    (6) class_decl -> CLASS ID . EXTENDS ID LCURLY class_body RCURLY

    LCURLY          shift and go to state 8
    EXTENDS         shift and go to state 9


state 8

    (5) class_decl -> CLASS ID LCURLY . class_body RCURLY
    (7) class_body -> . field_decl
    (8) class_body -> . constructor_decl
    (9) class_body -> . method_decl
    (10) class_body -> . class_body field_decl
    (11) class_body -> . class_body constructor_decl
    (12) class_body -> . class_body method_decl
    (13) field_decl -> . var_decl
    (14) field_decl -> . modifier var_decl
    (38) constructor_decl -> . modifier ID LPAREN RPAREN block
    (39) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (40) constructor_decl -> . ID LPAREN RPAREN block
    (41) constructor_decl -> . ID LPAREN formals RPAREN block
    (30) method_decl -> . modifier type ID LPAREN RPAREN block
    (31) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (32) method_decl -> . modifier VOID ID LPAREN RPAREN block
    (33) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (34) method_decl -> . type ID LPAREN RPAREN block
    (35) method_decl -> . type ID LPAREN formals RPAREN block
    (36) method_decl -> . VOID ID LPAREN RPAREN block
    (37) method_decl -> . VOID ID LPAREN formals RPAREN block
    (21) var_decl -> . type variables SEMICOLON
    (15) modifier -> . PUBLIC
    (16) modifier -> . PRIVATE
    (17) modifier -> . STATIC
    (18) modifier -> . PUBLIC STATIC
    (19) modifier -> . PRIVATE STATIC
    (20) modifier -> . empty
    (22) type -> . INT
    (23) type -> . FLOAT
    (24) type -> . BOOLEAN
    (25) type -> . STRING
    (26) type -> . ID
    (118) empty -> .

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
    ID              shift and go to state 10
    VOID            shift and go to state 18
    PUBLIC          shift and go to state 19
    PRIVATE         shift and go to state 20
    STATIC          shift and go to state 21
    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    BOOLEAN         shift and go to state 25
    STRING          shift and go to state 26

  ! ID              [ reduce using rule 118 (empty -> .) ]
  ! VOID            [ reduce using rule 118 (empty -> .) ]
  ! INT             [ reduce using rule 118 (empty -> .) ]
  ! FLOAT           [ reduce using rule 118 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 118 (empty -> .) ]
  ! STRING          [ reduce using rule 118 (empty -> .) ]

    class_body                     shift and go to state 11
    field_decl                     shift and go to state 12
    constructor_decl               shift and go to state 13
    method_decl                    shift and go to state 14
    var_decl                       shift and go to state 15
    modifier                       shift and go to state 16
    type                           shift and go to state 17
    empty                          shift and go to state 22

state 9

    (6) class_decl -> CLASS ID EXTENDS . ID LCURLY class_body RCURLY

    ID              shift and go to state 27


state 10

    (40) constructor_decl -> ID . LPAREN RPAREN block
    (41) constructor_decl -> ID . LPAREN formals RPAREN block
    (26) type -> ID .

    LPAREN          shift and go to state 28
    ID              reduce using rule 26 (type -> ID .)


state 11

    (5) class_decl -> CLASS ID LCURLY class_body . RCURLY
    (10) class_body -> class_body . field_decl
    (11) class_body -> class_body . constructor_decl
    (12) class_body -> class_body . method_decl
    (13) field_decl -> . var_decl
    (14) field_decl -> . modifier var_decl
    (38) constructor_decl -> . modifier ID LPAREN RPAREN block
    (39) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (40) constructor_decl -> . ID LPAREN RPAREN block
    (41) constructor_decl -> . ID LPAREN formals RPAREN block
    (30) method_decl -> . modifier type ID LPAREN RPAREN block
    (31) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (32) method_decl -> . modifier VOID ID LPAREN RPAREN block
    (33) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (34) method_decl -> . type ID LPAREN RPAREN block
    (35) method_decl -> . type ID LPAREN formals RPAREN block
    (36) method_decl -> . VOID ID LPAREN RPAREN block
    (37) method_decl -> . VOID ID LPAREN formals RPAREN block
    (21) var_decl -> . type variables SEMICOLON
    (15) modifier -> . PUBLIC
    (16) modifier -> . PRIVATE
    (17) modifier -> . STATIC
    (18) modifier -> . PUBLIC STATIC
    (19) modifier -> . PRIVATE STATIC
    (20) modifier -> . empty
    (22) type -> . INT
    (23) type -> . FLOAT
    (24) type -> . BOOLEAN
    (25) type -> . STRING
    (26) type -> . ID
    (118) empty -> .

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
    RCURLY          shift and go to state 29
    ID              shift and go to state 10
    VOID            shift and go to state 18
    PUBLIC          shift and go to state 19
    PRIVATE         shift and go to state 20
    STATIC          shift and go to state 21
    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    BOOLEAN         shift and go to state 25
    STRING          shift and go to state 26

  ! ID              [ reduce using rule 118 (empty -> .) ]
  ! VOID            [ reduce using rule 118 (empty -> .) ]
  ! INT             [ reduce using rule 118 (empty -> .) ]
  ! FLOAT           [ reduce using rule 118 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 118 (empty -> .) ]
  ! STRING          [ reduce using rule 118 (empty -> .) ]

    field_decl                     shift and go to state 30
    constructor_decl               shift and go to state 31
    method_decl                    shift and go to state 32
    var_decl                       shift and go to state 15
    modifier                       shift and go to state 16
    type                           shift and go to state 17
    empty                          shift and go to state 22

state 12

    (7) class_body -> field_decl .

    RCURLY          reduce using rule 7 (class_body -> field_decl .)
    ID              reduce using rule 7 (class_body -> field_decl .)
    VOID            reduce using rule 7 (class_body -> field_decl .)
    PUBLIC          reduce using rule 7 (class_body -> field_decl .)
    PRIVATE         reduce using rule 7 (class_body -> field_decl .)
    STATIC          reduce using rule 7 (class_body -> field_decl .)
    INT             reduce using rule 7 (class_body -> field_decl .)
    FLOAT           reduce using rule 7 (class_body -> field_decl .)
    BOOLEAN         reduce using rule 7 (class_body -> field_decl .)
    STRING          reduce using rule 7 (class_body -> field_decl .)


state 13

    (8) class_body -> constructor_decl .

    RCURLY          reduce using rule 8 (class_body -> constructor_decl .)
    ID              reduce using rule 8 (class_body -> constructor_decl .)
    VOID            reduce using rule 8 (class_body -> constructor_decl .)
    PUBLIC          reduce using rule 8 (class_body -> constructor_decl .)
    PRIVATE         reduce using rule 8 (class_body -> constructor_decl .)
    STATIC          reduce using rule 8 (class_body -> constructor_decl .)
    INT             reduce using rule 8 (class_body -> constructor_decl .)
    FLOAT           reduce using rule 8 (class_body -> constructor_decl .)
    BOOLEAN         reduce using rule 8 (class_body -> constructor_decl .)
    STRING          reduce using rule 8 (class_body -> constructor_decl .)


state 14

    (9) class_body -> method_decl .

    RCURLY          reduce using rule 9 (class_body -> method_decl .)
    ID              reduce using rule 9 (class_body -> method_decl .)
    VOID            reduce using rule 9 (class_body -> method_decl .)
    PUBLIC          reduce using rule 9 (class_body -> method_decl .)
    PRIVATE         reduce using rule 9 (class_body -> method_decl .)
    STATIC          reduce using rule 9 (class_body -> method_decl .)
    INT             reduce using rule 9 (class_body -> method_decl .)
    FLOAT           reduce using rule 9 (class_body -> method_decl .)
    BOOLEAN         reduce using rule 9 (class_body -> method_decl .)
    STRING          reduce using rule 9 (class_body -> method_decl .)


state 15

    (13) field_decl -> var_decl .

    RCURLY          reduce using rule 13 (field_decl -> var_decl .)
    ID              reduce using rule 13 (field_decl -> var_decl .)
    VOID            reduce using rule 13 (field_decl -> var_decl .)
    PUBLIC          reduce using rule 13 (field_decl -> var_decl .)
    PRIVATE         reduce using rule 13 (field_decl -> var_decl .)
    STATIC          reduce using rule 13 (field_decl -> var_decl .)
    INT             reduce using rule 13 (field_decl -> var_decl .)
    FLOAT           reduce using rule 13 (field_decl -> var_decl .)
    BOOLEAN         reduce using rule 13 (field_decl -> var_decl .)
    STRING          reduce using rule 13 (field_decl -> var_decl .)


state 16

    (14) field_decl -> modifier . var_decl
    (38) constructor_decl -> modifier . ID LPAREN RPAREN block
    (39) constructor_decl -> modifier . ID LPAREN formals RPAREN block
    (30) method_decl -> modifier . type ID LPAREN RPAREN block
    (31) method_decl -> modifier . type ID LPAREN formals RPAREN block
    (32) method_decl -> modifier . VOID ID LPAREN RPAREN block
    (33) method_decl -> modifier . VOID ID LPAREN formals RPAREN block
    (21) var_decl -> . type variables SEMICOLON
    (22) type -> . INT
    (23) type -> . FLOAT
    (24) type -> . BOOLEAN
    (25) type -> . STRING
    (26) type -> . ID

    ID              shift and go to state 34
    VOID            shift and go to state 36
    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    BOOLEAN         shift and go to state 25
    STRING          shift and go to state 26

    var_decl                       shift and go to state 33
    type                           shift and go to state 35

state 17

    (34) method_decl -> type . ID LPAREN RPAREN block
    (35) method_decl -> type . ID LPAREN formals RPAREN block
    (21) var_decl -> type . variables SEMICOLON
    (27) variables -> . variable
    (28) variables -> . variables COMMA variable
    (29) variable -> . ID

    ID              shift and go to state 37

    variables                      shift and go to state 38
    variable                       shift and go to state 39

state 18

    (36) method_decl -> VOID . ID LPAREN RPAREN block
    (37) method_decl -> VOID . ID LPAREN formals RPAREN block

    ID              shift and go to state 40


state 19

    (15) modifier -> PUBLIC .
    (18) modifier -> PUBLIC . STATIC

    ID              reduce using rule 15 (modifier -> PUBLIC .)
    VOID            reduce using rule 15 (modifier -> PUBLIC .)
    INT             reduce using rule 15 (modifier -> PUBLIC .)
    FLOAT           reduce using rule 15 (modifier -> PUBLIC .)
    BOOLEAN         reduce using rule 15 (modifier -> PUBLIC .)
    STRING          reduce using rule 15 (modifier -> PUBLIC .)
    STATIC          shift and go to state 41


state 20

    (16) modifier -> PRIVATE .
    (19) modifier -> PRIVATE . STATIC
